--- a/src/app/component/department/department-create/department-create.component.html
+++ b/src/app/component/department/department-create/department-create.component.html
@@ -10,7 +10,7 @@
             <label for="name"><b>Department name</b></label>
             <input type="text" class="form-control" id="name" required [(ngModel)]="department.name" name="name">
           </div>
-          <button type="submit" class="btn btn-info">Create new address</button>
+          <button type="submit" class="btn btn-info">Create new</button>
         </form>
       </div>
     </div>
