--- a/src/app/navigator/navigator.component.html
+++ b/src/app/navigator/navigator.component.html
@@ -10,7 +10,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a routerLink="create-student" class="nav-link" routerLinkActive="active">Create student</a>
               <a routerLink="student" class="nav-link" routerLinkActive="active">List student</a>
-              <a routerLink="delete-student" class="nav-link" routerLinkActive="active">Delete conduct</a>
+              <a routerLink="delete-student" class="nav-link" routerLinkActive="active">Action student</a>
             </div>
           </li>
 
