--- a/src/app/component/ranker/ranker-create/ranker-create.component.html
+++ b/src/app/component/ranker/ranker-create/ranker-create.component.html
@@ -10,7 +10,7 @@
             <label for="name"><b>Ranker name</b></label>
             <input type="text" class="form-control" id="name" required [(ngModel)]="ranker.name" name="name">
           </div>
-          <button type="submit" class="btn btn-info">Create new ranker</button>
+          <button type="submit" class="btn btn-info">Create new</button>
         </form>
       </div>
     </div>
