--- a/src/app/component/student/student-update/student-update.component.html
+++ b/src/app/component/student/student-update/student-update.component.html
@@ -77,7 +77,7 @@
       </select>
     </div>
     <div class="form-group">
-      <button class="btn btn-info btn-block">Create</button>
+      <button class="btn btn-info btn-block">Update</button>
     </div>
   </form>
 </div>
